<resources>
    <string name="app_name">MembersList</string>
    <string name="members">Members info</string>
    <string name="hint_name">Enter user name</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="DOB">DOB</string>
    <string name="colon">:</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="person_name">Please enter user name</string>
    <string name="user_details">Enter user details</string>
    <string name="photo">+ Add Photo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="two_digits_after_decimal">%.2f</string>
    <string name="select_all">Select all</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>
    <string name="search_name">Search users by name</string>
    <string name="phone_no">Phone Number (optional)</string>
    <string name="hint_phone_no">Enter phone no</string>
    <string name="more_opt">More Options</string>
    <string name="transgender">Transgender</string>
    <string name="intersex">Intersex</string>
    <string name="non_Binary">Non Binary</string>
    <string name="not_preferred">Prefer not to say</string>
    <string name="others">Others</string>
    <string name="update">Update</string>
    <string name="no_users">No users found</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="edit">Edit</string>
    <string name="lock_text">Members list is locked</string>
    <string name="authentication">Authentication is required to access the app</string>
    <string name="unlock">Unlock now</string>
    <string name="fav_color">Favourite color</string>
    <string name="choose_fav_color">Choose favourite color</string>
    <string name="ok">OK</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_black">Black</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_dark_gray">Dark Gray</string>
    <string name="color_light_gray">Light Gray</string>
    <string name="color_water">Water Blue</string>
    <string name="color_crimson_red">Crimson Red</string>
    <string name="color_light_green">Light Green</string>
    <string name="color_orange">Orange</string>
    <string name="color_maroon">Maroon</string>
    <string name="color_dark_green">Dark Green</string>
    <string name="color_gold">Gold</string>
    <string name="color_baby_pink">Baby Pink</string>
    <string name="color_sky_blue">Sky Blue</string>
    <string name="show_color">Show color</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="start_date">Start Date(YY-MM-DD)</string>
    <string name="end_date">End Date(YY-MM-DD)</string>
    <string name="filter_users">Filter users</string>
</resources>