<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_vertical_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.22"/>

        <TextView
            android:id="@+id/filter_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/filter_users"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/filter_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_users"/>

        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/age"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_view"/>

        <EditText
            android:id="@+id/et_age"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/spinner_border"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@id/guide_vertical_20"
            app:layout_constraintTop_toTopOf="@id/age_text"
            app:layout_constraintBottom_toBottomOf="@id/age_text"/>

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/gender"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_text"/>

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/spinner_border"
            android:inputType="textCapCharacters"
            app:layout_constraintStart_toEndOf="@id/guide_vertical_20"
            app:layout_constraintTop_toTopOf="@id/gender_text"
            app:layout_constraintBottom_toBottomOf="@id/gender_text"/>

        <EditText
            android:id="@+id/et_start_date"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:paddingHorizontal="5dp"
            android:inputType="date"
            android:background="@drawable/spinner_border"
            android:hint="@string/start_date"
            android:cursorVisible="false"
            android:focusable="false"
            app:layout_constraintWidth_percent="0.44"
            app:layout_constraintTop_toBottomOf="@id/gender_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/et_end_date" />

        <EditText
            android:id="@+id/et_end_date"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:paddingHorizontal="5dp"
            android:inputType="date"
            android:background="@drawable/spinner_border"
            android:hint="@string/end_date"
            android:focusable="false"
            android:cursorVisible="false"
            app:layout_constraintWidth_percent="0.44"
            app:layout_constraintTop_toBottomOf="@id/gender_text"
            app:layout_constraintStart_toEndOf="@id/et_start_date"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/btn_apply_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/apply_filter"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_start_date"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/btn_reset_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/reset_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_start_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>