<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lock_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_text"
            android:textStyle="bold"
            android:textSize="22sp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication"
            android:textSize="18sp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/lock_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authentication"/>

        <Button
            android:id="@+id/unlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlock"
            android:textSize="22sp"
            android:textColor="@color/blue"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>