<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Enter user details"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingTop="20dp"
            android:text="@string/person_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person" />

        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Gender"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextUserName" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/spinner_border"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:entries="@array/gender_array"
            android:popupTheme="@style/SpinnerPopupStyle"
            app:layout_constraintBottom_toBottomOf="@id/Gender"
            app:layout_constraintStart_toEndOf="@id/Gender"
            app:layout_constraintTop_toTopOf="@id/Gender" />

        <!--<TextView
            android:id="@+id/dobText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date of birth"
            android:layout_margin="10dp"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerGender"/>

        <TextView
            android:id="@+id/textViewDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Select DOB"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/spinnerGender"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDOB"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerGender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/DateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="Date of birth"
                android:focusable="false"
                android:inputType="date"
                android:padding="12dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/sky_blue"
            android:text="@string/photo"
            app:layout_constraintBottom_toBottomOf="@id/imageViewPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageViewPhoto" />

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_user_circle_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDOB" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/Cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPhoto" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/Add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPhoto" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>