<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.example.memberslist.database.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".56" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".66" />

            <TextView
                android:id="@+id/userNameKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:text="@{user.name}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameKey" />

            <TextView
                android:id="@+id/userAgeKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="8dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userAgeVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="8dp"
                android:text="@{user.age}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toEndOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/userAgeKey" />

            <TextView
                android:id="@+id/userGenderKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline3" />

            <TextView
                android:id="@+id/userGenderVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@{user.gender}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userGenderKey" />

            <TextView
                android:id="@+id/userDobKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="8dp"
                android:text="@string/dob"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toEndOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/guideline3" />

            <TextView
                android:id="@+id/userDobVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="8dp"
                android:text="@{user.dob}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toEndOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/userDobKey" />

            <TextView
                android:id="@+id/show_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:paddingTop="8dp"
                android:text="@string/show_color"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/guideline6"
                app:layout_constraintEnd_toStartOf="@id/color_toggle_switch"
                app:layout_constraintTop_toBottomOf="@id/guideline3" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/color_toggle_switch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                app:layout_constraintBottom_toBottomOf="@id/show_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/show_color"
                app:layout_constraintTop_toTopOf="@id/show_color" />

            <ImageView
                android:id="@+id/fav_color_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_color" />

            <TextView
                android:id="@+id/fav_color_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/show_color" />

            <ImageView
                android:id="@+id/edit_user"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription=""
                android:src="@drawable/edit_user_icon"
                app:layout_constraintBottom_toBottomOf="@id/userAgeVal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/userAgeKey" />

            <TextView
                android:id="@+id/userPhoneKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/phone_no"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline4" />

            <TextView
                android:id="@+id/userPhoneVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@{user.phoneNumber}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userPhoneKey" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>